# aghermann

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  config.h.in  configure.ac  configure.in  libaghcore-glib.pc.in  libaghcore.pc.in  libedf.pc.in  libexstrom.pc.in  libica.pc.in  libsigfile.pc.in  unwanted-files
data/: .gitignore  Makefile.am  aghermann.desktop  aghermann.desktop.in  aghermann.gresource.xml  dialogs.glade  dialogs.glade.in  edfhed-gtk.desktop.in  experiment-dl.sh  main.glade  mf.glade  mw-dialogs.glade  mw.glade  session-chooser.glade  sf-artifacts.glade  sf-patterns.glade  sf-phasediff.glade  sf.glade
data/ui/: .gitignore  Makefile.am  agh-ui-main.glade  agh-ui-main.glade.in  agh-ui-mf.glade  agh-ui-sf.glade  agh-ui.glade  aghermann.gresource.xml  dialogs.glade.in  edf-header-editor.glade  main.glade  main.glade.in  mf.glade  session-chooser.glade
doc/: .gitignore  Makefile.am  README  README.org  aghermann.org.in
doc/org/: Makefile.am  aghermann.org.in  mc.org  model.org  usage.org
src/: .gitignore  Makefile.am  common.h  main.c  main.cc  misc.hh  print_version.cc  string.hh  structures.c  structures.cc  structures.h  structures.hh
src/aghermann/: .gitignore  Makefile.am  globals.cc  globals.hh  main.cc  print_version.cc
src/aghermann/expdesign/: Makefile.am  forward-decls.hh  loadsave.cc  primaries.cc  primaries.hh  profile.hh  recording.cc  recording.hh  subject.cc  tree-scanner.cc
src/aghermann/ica/: Makefile.am  ica.hh
src/aghermann/metrics/: Makefile.am  all.hh  bands.hh  mc-artifacts.cc  mc-artifacts.hh  mc-artifacts.ii  mc.cc  mc.hh  page-metrics-base.cc  page-metrics-base.hh  psd.cc  psd.hh  swu.cc  swu.hh
src/aghermann/model/: Makefile.am  achermann-siman.cc  achermann-tunable.cc  achermann-tunable.hh  achermann.cc  achermann.hh  beersma.hh  borbely.cc  forward-decls.hh  ultradian-cycle.cc
src/aghermann/patterns/: Makefile.am  patterns.cc  patterns.hh  patterns.ii
src/aghermann/rk1968/: Makefile.am  rk1968.cc  rk1968.hh
src/aghermann/ui/: Makefile.am  forward-decls.hh  globals.hh  libcommon.cc  misc.cc  misc.hh  ui++.cc  ui.cc  (+2 more)
src/common/: Makefile.am  alg.hh  config-validate.cc  config-validate.hh  containers.hh  fs.hh  globals.hh  lang.hh  libcommon.cc  misc.hh  string.hh  subject_id.cc  subject_id.hh
src/core/: Makefile.am  assisted-score.cc  boost-config-validate.hh  edf.cc  edf.hh  forward-decls.hh  iface-expdesign.cc  iface-glib.cc  iface-glib.h  iface-simulations.cc  iface-tunables.cc  iface.h  misc.hh  model-classic.cc  model.cc  model.hh  page.cc  page.hh  primaries-loadsave.cc  primaries.cc  primaries.hh  psd.cc  psd.hh  siman.cc  tunable.cc  tunable.hh
src/edf-header-editor/: main.cc
src/expdesign/: Makefile.am  forward-decls.hh  loadsave.cc  primaries-loadsave.cc  primaries-tree-scanner.cc  primaries.cc  primaries.hh  profile.hh  recording.cc  recording.hh  tree-scanner.cc
src/ica/: Makefile.am  ica.hh
src/libagh/: Makefile.am  assisted-score.cc  boost-config-validate.hh  edf-slowwave.cc  edf.cc  edf.hh  enums.hh  forward-decls.hh  iface-expdesign.cc  iface-glib.cc  iface-glib.h  iface-signal.cc  iface-simulations.cc  iface-tunables.cc  iface.h  misc.hh  model.cc  model.hh  page.cc  page.hh  primaries-loadsave.cc  primaries.cc  primaries.hh  psd.cc  psd.hh  scoring-assistant.cc  signal.cc  signal.hh  siman.cc  source.hh  tunable.cc  tunable.hh
src/libedf/: Makefile.am  edf.hh
src/libexstrom/: Makefile.am  exstrom.hh  iface.cc  iface.h  signal.cc  signal.hh
src/libica/: Makefile.am  ica.cc  ica.hh
src/libmetrics/: Makefile.am  all.hh  bands.hh  forward-decls.hh  mc-artifacts.cc  mc-artifacts.hh  mc-artifacts.ii  mc.cc  mc.hh  page-metrics-base.cc  page-metrics-base.hh  psd.cc  psd.hh  swu.cc  swu.hh
src/libsigfile/: Makefile.am  all.hh  artifacts.cc  artifacts.hh  channel.cc  channel.hh  edf-file.xml  edf-io.cc  edf.cc  edf.hh  edf.ii  forward-decls.hh  mc.cc  mc.hh  page-metrics-base.cc  page-metrics-base.hh  page.cc  page.hh  psd.cc  psd.hh  scoring-assistant.cc  source-base.cc  source-base.hh  source-iface.hh  source-slowwave.cc  source.cc  source.hh  tsv.cc  tsv.hh  typed-source.cc  typed-source.hh  ucont.cc  ucont.hh
src/libsigproc/: Makefile.am  exstrom.cc  exstrom.hh  ext-filters.cc  ext-filters.hh  ext-filters.ii  sigproc.cc  sigproc.hh  sigproc.ii  winfun.cc  winfun.hh
src/metrics/: Makefile.am  forward-decls.hh  mc-artifacts.cc  mc-artifacts.hh  mc-artifacts.ii  mc.cc  mc.hh  page-metrics-base.cc  page-metrics-base.hh  phasic-events.hh  phasic-events.ii  psd.cc  psd.hh  swu.cc  swu.hh
src/model/: Makefile.am  achermann-siman.cc  achermann-tunable.cc  achermann-tunable.hh  achermann.cc  achermann.hh  assisted-score.cc  beersma.hh  borbely.cc  borbely.hh  forward-decls.hh  siman.cc  tunable.cc  tunable.hh  ultradian-cycle.cc
src/patterns/: Makefile.am  patterns.cc  patterns.hh  patterns.ii
src/rk1968/: Makefile.am  rk1968.cc  rk1968.hh
src/sigproc/: Makefile.am  exstrom.cc  exstrom.hh  ext-filters.cc  ext-filters.hh  ext-filters.ii  patterns.cc  patterns.hh  patterns.ii  sigproc.cc  sigproc.hh  sigproc.ii  winfun.cc  winfun.hh
src/tools/: .gitignore  Makefile.am  agh-profile-gen.cc  edfcat.cc  edfhed-common.cc  edfhed-gtk.cc  edfhed.cc  edfhed.hh  plot-vaf
src/ui/: Makefile.am  draw-signal-generic.cc  draw-signal-generic.hh  ed-admit-one.cc  ed-construct.cc  ed-loadsave.cc  ed-measurements.cc  ed-measurements_cb.cc  ed-populate.cc  ed-settings_cb.cc  ed-simulations.cc  ed-simulations_cb.cc  ed-widgets.hh  ed.cc  ed.hh  ed_cb.cc  ed_cb.hh  expdesign-admit-one.cc  expdesign-chooser.cc  expdesign-chooser_cb.cc  expdesign-construct.cc  expdesign-loadsave.cc  expdesign-measurements.cc  expdesign-measurements_cb.cc  expdesign-selector.cc  expdesign-settings.cc  expdesign-settings_cb.cc  expdesign-simulations.cc  expdesign-simulations_cb.cc  expdesign-statusbar.cc  expdesign-widgets.hh  expdesign.cc  expdesign.hh  expdesign_cb.cc  expdesign_cb.hh  forward-decls.hh  globals.cc  globals.hh  libcommon.cc  loadsave.c  (+98 more)
upstream/src/: Makefile.am
(+335 files in other folders)
