uidir = $(datadir)/${PACKAGE}/ui

ui_DATA = \
	agh-ui-main.glade agh-ui-sf.glade agh-ui-mf.glade edf-header-editor.glade \
	idle-bg.svg aghermann.png equations1.png

CLEANFILES = \
	agh-ui-main.glade

EXTRA_DIST = \
	agh-ui-main.glade.in \
	agh-ui-sf.glade agh-ui-mf.glade edf-header-editor.glade \
	idle-bg.svg aghermann.png equations1.png
