uidir = $(datadir)/${PACKAGE}/ui

ui_DATA = \
	session-chooser.glade main.glade sf.glade mf.glade edf-header-editor.glade \
	idle-bg.svg aghermann.png equations1.png

CLEANFILES = \
	main.glade

EXTRA_DIST = \
	session-chooser.glade main.glade.in \
	sf.glade mf.glade edf-header-editor.glade \
	idle-bg.svg aghermann.png equations1.png
