uidir = $(datadir)/${PACKAGE}/ui

ui_DATA = \
	session-chooser.glade main.glade dialogs.glade \
	sf.glade mf.glade \
	edfhed.glade \
	idle-bg.svg aghermann.png equations1.png

CLEANFILES = \
	dialogs.glade

EXTRA_DIST = \
	session-chooser.glade main.glade dialogs.glade.in \
	sf.glade mf.glade edfhed.glade \
	idle-bg.svg aghermann.png equations1.png
